--- a/client/src/components/Header.css
+++ b/client/src/components/Header.css
@@ -3,43 +3,94 @@
     justify-content: space-between;
     padding: 20px;
     border-bottom: 1px solid #ccc;
-    background-color: #333; /* Define o fundo preto */
-    color: #fff; /* Define a cor do texto para branco */
-    max-height: 50px;
+    background-color: #333;
+    color: #fff;
+    align-items: center;
+    position: relative;
 }
 
 .header .logo {
-    display: flex;
     font-size: 24px;
     font-weight: bold;
-    color: #fff; /* Define a cor do logo para branco */
-    padding: 1rem;
+    color: #fff;
+}
+
+.header nav {
+    display: flex;
+    margin-left: auto;
 }
 
 .header nav ul {
     list-style-type: none;
     display: flex;
     align-items: center;
-    gap: 20px;
+    margin: 0;
+    padding: 0;
 }
 
 .header nav ul li {
     cursor: pointer;
-    color: #fff; /* Define a cor dos itens do menu para branco */
+    color: #fff;
+    padding: 10px 15px;
+    white-space: nowrap;
 }
 
-.demo-button,
-.get-started-button {
+.login-button {
     padding: 10px 15px;
     cursor: pointer;
-    background-color: #fff; /* Define o fundo dos botões para branco */
-    color: #000; /* Define a cor do texto dos botões para preto */
+    background-color: #fff;
+    color: #000;
     border: none;
     border-radius: 4px;
     transition: background-color 0.3s ease;
 }
 
-.demo-button:hover,
-.get-started-button:hover {
-    background-color: #e0e0e0; /* Muda a cor do fundo ao passar o mouse */
+.login-button:hover {
+    background-color: #e0e0e0;
+}
+
+.menu-button {
+    display: none;
+    font-size: 24px;
+    background: none;
+    border: none;
+    color: #fff;
+    cursor: pointer;
+}
+
+@media (max-width: 768px) {
+    .menu-button {
+        display: block;
+    }
+
+    nav {
+        display: none;
+        position: absolute;
+        top: 100%;
+        left: 0;
+        right: 0;
+        background-color: #333;
+        color: #fff;
+        transition: max-height 0.3s ease;
+        overflow: hidden;
+        max-height: 0;
+        z-index: 10;
+    }
+
+    nav.open {
+        display: block;
+        max-height: 300px;
+    }
+
+    nav ul {
+        flex-direction: column;
+        align-items: flex-start;
+        margin: 10px !important;
+        padding: 0;
+    }
+
+    nav ul li {
+        padding: 10px;
+        width: 100%;
+    }
 }
