--- a/client/src/pages/Admin/Admin.css
+++ b/client/src/pages/Admin/Admin.css
@@ -40,34 +40,12 @@
   height: 200px; /* Ajuste a altura do editor conforme necessário */
 }
 
-.edit-btn {
-  padding: 10px 20px;
-  margin-right: 10px;
-  background-color: #007bff;
-  color: white;
-  border: none;
-  cursor: pointer;
-  border-radius: 5px;
-  transition: background-color 0.3s ease;
-}
-
-.edit-btn:hover {
-  background-color: #0056b3;
-}
-
 .delete-btn {
-  padding: 10px 20px;
-  margin-right: 10px;
-  background-color: red;
-  color: white;
-  border: none;
-  cursor: pointer;
-  border-radius: 5px;
-  transition: background-color 0.3s ease;
+  background-color: transparent;
 }
 
-.delete-btn:hover {
-  background-color: firebrick;
+.edit-btn {
+  background-color: transparent;
 }
 
 .save-btn {
@@ -76,7 +54,7 @@
 }
 
 .save-btn:hover {
-  background-color: #169935;
+  background-color: rgb(44, 44, 44);
 }
 
 .editor-popup {
@@ -103,7 +81,7 @@
 
 .create-btn {
   margin-bottom: 20px;
-  background-color: #28a745;
+  background-color: black;
   color: white;
   padding: 10px 20px;
   border: none;
@@ -111,8 +89,12 @@
   border-radius: 5px;
 }
 
+.create-btn:hover {
+  background-color: rgb(46, 46, 46);
+}
+
 .save-btn {
-  background-color: #28a745;
+  background-color: black;
   color: white;
   padding: 10px 20px;
   border: none;
@@ -132,4 +114,10 @@
 
 .input-field {
   max-width: 100%;
+}
+
+.image-input {
+  display: flex;
+  flex-direction: column;
+  margin-bottom: 10px;
 }
